--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header img {
     width: 100%;
 }
-.aaa .more_inf {
+.header__details {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header { text-align: center;
 }
 }
-.centered-main-page-element {
+.main-content {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -89,7 +89,7 @@ label[for='new-task'] {
     margin: 0 0 20px;
 }
 input#new-task {
-    width: 318px;
+    width: 415px;
 }
 
 /* Task list */
