--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for='new-task'] {
+.new-task {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +67,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+#new-task {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,16 +79,16 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+#new-task:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.new-task {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
     width: 415px;
 }
 
@@ -118,17 +118,17 @@ li > label {
 li >    input[type="text"] {
     width: 226px
 }
-button.delete img {
+.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
     text-decoration: line-through
     color: #888;
 }
@@ -138,11 +138,11 @@ ul li input[type=text] {
     display:none
 }
 
-ul li.editMode input[type=text] {
+.editMode input[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.editMode label {
     display:none;
 }
