--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ li > label {
     width: 226px;
 }
 li >    input[type="text"] {
-    width: 226px
+    width: 226px;
 }
 .delete img {
     height: 2em;
@@ -130,13 +130,13 @@ li >    input[type="text"] {
 
 /* Completed */
 #completed-tasks label {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-    display: none
+    display: none;
 }
 
 .editMode input[type=text] {
